--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "Chrome 89"
   ],
   "dependencies": {
+    "@mdi/js": "^6.6.96",
     "electron-context-menu": "^3.1.2",
     "electron-serve": "^1.1.0",
-    "electron-window-state": "^5.0.3"
+    "electron-window-state": "^5.0.3",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
