--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-context-menu": "^3.1.2",
     "electron-serve": "^1.1.0",
     "electron-window-state": "^5.0.3",
+    "stylite-ui": "file:stylite-ui-0.0.1.tgz",
     "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
