--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "Chrome 89"
   ],
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "@mdi/js": "^6.6.96",
+    "better-sqlite3": "^7.5.3",
+    "date-fns": "^2.28.0",
     "electron-context-menu": "^3.1.2",
     "electron-serve": "^1.1.0",
     "electron-window-state": "^5.0.3",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
     "@sveltejs/kit": "next",
+    "@types/better-sqlite3": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.4",
