--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "allowJs": true,
-    "checkJs": false,
+    "checkJs": true,
     "paths": {
       "$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
       "$lib": ["src/lib"],
@@ -37,7 +37,9 @@
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.svelte",
+    "src/preload.cjs",
     "src/electron.js",
-    "src/electron.cjs"
+    "src/electron.cjs",
+    "src/directCareLogDB.cjs"
   ]
 }
